--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -31,5 +31,6 @@ layout: default
       google_ad_client: "ca-pub-5600178387036192",
       enable_page_level_ads: true
     });
+    console.log(1);
   </script>
 </header>
