--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,6 +26,15 @@ layout: base
 
 <article class="page" role="article">
   <header>
+    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <script>
+      (adsbygoogle = window.adsbygoogle || []).push({
+        google_ad_client: "ca-pub-5600178387036192",
+        enable_page_level_ads: true
+      });
+      console.log(2);
+    </script>
+
     <h1 class="page-title">{{ page.title | default:strings.home | default:"Home" }}</h1>
     {% include message.html text=page.description hide=page.hide_description %}
   </header>
