--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -24,7 +24,7 @@ layout: default
 
 {{ content }}
 
-<header>
+<head>
   <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
   <script>
     (adsbygoogle = window.adsbygoogle || []).push({
@@ -33,4 +33,4 @@ layout: default
     });
     console.log(1);
   </script>
-</header>
+</head>
