--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -71,6 +71,15 @@ layout: compress
 {% endif %}
 
 <head>
+  <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+  <script>
+    (adsbygoogle = window.adsbygoogle || []).push({
+      google_ad_client: "ca-pub-5600178387036192",
+      enable_page_level_ads: true
+    });
+    console.log(3);
+  </script>
+
   {% include head.html %}
 </head>
 
