--- a/_includes/head/scripts.html
+++ b/_includes/head/scripts.html
@@ -28,6 +28,16 @@
 </script>
 <!--<![endif]-->
 
+<!-- google adSense -->
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script>
+  (adsbygoogle = window.adsbygoogle || []).push({
+    google_ad_client: "ca-pub-5600178387036192",
+    enable_page_level_ads: true
+  });
+  console.log('adSense');
+</script>
+
 <noscript>
   {% assign font_heading = site.font_heading | default:"'Roboto Slab', Helvetica, Arial, sans-serif" %}
   {% assign font         = site.font         | default:"'Noto Sans', Helvetica, Arial, sans-serif" %}
