--- a/_layouts/list.html
+++ b/_layouts/list.html
@@ -39,7 +39,7 @@ layout: base
     <h1 class="page-title">{{ page.title }}</h1>
     {% include message.html text=page.description hide=page.hide_description %}
   </header>
-  <hr class="sr-only"/>
+  <hr class="sr-only test"/>
 {% endif %}
 
 {{ content }}
