--- a/_includes/post.html
+++ b/_includes/post.html
@@ -27,11 +27,10 @@
     {{ post.content }}
   {% else %}
     {{ post.excerpt }}
-    {% capture post_title %}<a class="heading flip-title" href="{{ post.url | relative_url }}">{{ post.title }}</a>{% endcapture %}
-    {% assign text = site.data.strings.continue_reading | default:"Continue reading <!--post_title-->" %}
+    {% capture read_more %}<a class="heading flip-title" href="{{ post.url | relative_url }}">read more</a>{% endcapture %}
     <footer>
       <p class="read-more">
-        {{ text | replace:"<!--post_title-->", post_title }}
+        {{ read_more }}
       </p>
     </footer>
   {% endunless %}
