--- a/_sass/pooleparty/__inline/_type.scss
+++ b/_sass/pooleparty/__inline/_type.scss
@@ -36,7 +36,7 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
 }
 
 .heading {
-  font-weight: $font-weight-heading;
+  //font-weight: $font-weight-heading;
 }
 
 h1, .h1 {
@@ -93,6 +93,3 @@ h4, h5, h6, .h4, .h5, .h6 {
   margin-bottom: 0.5rem;
   font-size: 1rem;
 }
-
-
-
