--- a/assets/reveal/css/reveal.css
+++ b/assets/reveal/css/reveal.css
@@ -1553,3 +1553,13 @@ body {
 
 .zoomed .reveal .roll span:after {
   visibility: hidden; }
+
+/*********************************************
+ * customizing
+ *********************************************/
+.reveal section p {
+  display: inline-block;
+  font-size: 0.6em;
+  line-height: 1.2em;
+  vertical-align: top;
+}
