--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -26,8 +26,8 @@ layout: compress
 {% assign plugins = site.plugins | default:site.gems %}
 
 {% if plugins contains 'jekyll-seo-tag' %}
-  {% assign color = site.accent_color | default:'#4fb1ba' %}
-  {% assign image = site.accent_image | default:'/assets/img/sidebar-bg.jpg' %}
+  {% assign color = site.accent_color | default:'#a29b40' %}
+  {% assign image = site.accent_image | default:'/assets/img/seoul.jpg' %}
 
   {% if page.categories.size > 0 %}
     {% assign category_name = page.categories.first %}
@@ -48,8 +48,8 @@ layout: compress
   {% if page.accent_image %}{% assign image = page.accent_image %}{% endif %}
 
 {% else %}
-  {% assign color = site.accent_color | default:site.color | default:'#4fb1ba' %}
-  {% assign image = site.accent_image | default:site.image | default:'/assets/img/sidebar-bg.jpg' %}
+  {% assign color = site.accent_color | default:site.color | default:'#a29b40' %}
+  {% assign image = site.accent_image | default:site.image | default:'/assets/img/seoul.jpg' %}
 
   {% if page.categories.size > 0 %}
     {% assign category_name = page.categories.first %}
