--- a/_sass/hydejack/__inline/_sidebar.scss
+++ b/_sass/hydejack/__inline/_sidebar.scss
@@ -78,7 +78,7 @@ hy-drawer {
   right: 0;
   bottom: 0;
   left: 0;
-  background: #202020 center / cover;
+  background: #202020 right / cover;
 
   /* make sidebar slightly darker to increase text readability (when using a background image) */
   &::after {
