--- a/assets/revealjs/css/custom.css
+++ b/assets/revealjs/css/custom.css
@@ -19,3 +19,10 @@
 .reveal .b-white {
   background: white;
 }
+.reveal .text-left {
+  text-align: left;
+}
+.reveal .text {
+  font-size: 20px;
+  margin-top: 80px;
+}
